
- 1.45 released -

Support xz compressed distribution sets.

Support NetBSD/vax via simh.  Installing and booting works;
running the ATF tests does not.  From Utkarsh Anand.

Mark the NumberedVersion and Release classes as deprecated.

Remove the obsolete clases DailyBuild and LocalBuild.

Fix a bug that caused the guest OS to unnecessarily boot twice
when entering "interact" mode since version 1.43.

Don't send a spurious "x" at the end of installation.

Log the pexpect version.

- 1.44 released -

Disable optimization avoiding copies when installing from a file: URL
or local path, as it broke installation of source sets.

Deal with pexpect 4.3.1 requiring delayafterclose and
delayafterterminate to be set in two different places
(https://github.com/pexpect/pexpect/issues/462).

Support installing on disks with a corrupt or out-of-date MBR.

Log the command line arguments on startup.

- 1.43 released -

Log interactive mode input and output to the structured log file.

Add support for NetBSD/hpcmips targets, from Utkarsh Anand.

- 1.42 released -

VM console input is no longer logged to stdout, to keep it from
appearing twice when echoed by the VM.

Fix VM console output appearing twice in interact mode (again).

Add support for gxemul as a new VMM and NetBSD/pmax as a new guest.
From Utkarsh Anand.

Increase the default test timeout to 24 hours, as the tests now
take much longer to run than before due to a combination of
the addition of new tests and qemu performance regressions.

Added target support for NetBSD/evbarm-earmv7hf, from Utkarsh Anand.
This installs from a pre-built image rather than using sysinst.

When installing from a file: URL or local path, avoid creating
unnecessary copies of the release files.  From Utkarsh Anand.

New command line option --tests for explicitly selecting the the Kyua
test framework instead of ATF, from Utkarsh Anand.

- 1.41 released -

If the VMM exits unexpectedly while running the ATF tests or some