@@ -1,3 +1,6 @@
+The run_tests() method now halts the VM, to ensure that the
+scratch disk containing ATF test results is flushed by the
+guest before being read by the host.
 
 - 1.45 released -
 
